--- a/package.json
+++ b/package.json
@@ -7,7 +7,10 @@
     "test": "jest --verbose --runInBand",
     "test:watch": "npm run test -- --watch",
     "start": "node server.js",
-    "start:watch": "nodemon server.js"
+    "start:watch": "nodemon server.js",
+    "create-tables": "node data/create-tables.js",
+    "drop-tables": "node data/drop-tables.js",
+    "recreate-tables": "npm run drop-tables && npm run create-tables"
   },
   "jest": {
     "testEnvironment": "node"
@@ -25,6 +28,7 @@
   "dependencies": {
     "dotenv": "^8.1.0",
     "express": "^4.17.1",
-    "mongoose": "^5.7.0"
+    "mongoose": "^5.7.0",
+    "pg": "^7.12.1"
   }
 }
